<resources>
    <string name="app_name">MaterialDesignApp</string>
    <string name="clamps">螺丝钳</string>
    <string name="clamps_description">用来拧螺丝的工具</string>
    <string name="saw">锯子</string>
    <string name="saw_description">用来锯木材的工具</string>
    <string name="drills">钻头</string>
    <string name="drills_description">用来钻东西的工具</string>
    <string name="sanders">砂纸</string>
    <string name="sanders_description">用来打磨木材的工具</string>
    <string name="routers">路由器</string>
    <string name="routers_description">用来连接网络的工具</string>
    <string name="more">更多</string>
    <string name="more_description">其他更多的工具</string>


    <string name="about">关于</string>
    <string name="stationary">固定</string>
    <string name="handheld">手持型</string>
    <string name="battery">一号电池</string>
    <string name="battery2">二号电池</string>
    <string name="battery3">三号电池</string>
    <string name="battery4">四号电池</string>

    <string name="index">主页</string>
    <string name="index_description">主页面内容</string>
    <string name="history">观看历史</string>
    <string name="history_description">历史页面内容</string>
    <string name="cache">本地缓存</string>
    <string name="cache_description">缓存页面内容</string>
    <string name="collection">我的收藏</string>
    <string name="collection_description">我的收藏页面内容</string>
    <string name="guanzhu">我的关注</string>
    <string name="guanzhu_description">我的关注页面内容</string>
    <string name="info">我的信息</string>
    <string name="info_description">我的信息页面内容</string>
    <string name="pifu">皮肤</string>
    <string name="pifu_description">皮肤页面内容</string>
    <string name="help">帮助</string>
    <string name="help_description">帮助页面内容</string>
    <string name="share">分享</string>
    <string name="share_description">分享页面内容</string>

    <string name="huwai">户外</string>
    <string name="xingxiu">星秀</string>
    <string name="remen">热门</string>
    <string name="meishi">美食</string>
    <string name="erciyuan">二次元</string>
    <string name="changliao">畅聊</string>
    <string name="yingping">影评</string>


</resources>
